Sourcing bills from the server

--- a/ebill-client/partials/bills.html
+++ b/ebill-client/partials/bills.html
@@ -4,8 +4,8 @@
 		<a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
 			<div class="d-flex w-100 justify-content-between">
 				<div class="span12">
-					<h5 class="mb-1 pull-left">{{bill.issuer}}</h5>
-		    		<h5 class="mb-1 pull-right">{{bill.issuer}}</h5>
+					<h5 class="mb-1 pull-left">{{bill.text}}</h5>
+		    		<h5 class="mb-1 pull-right">{{bill.senderIdentification}}</h5>
 				</div>
 				<div class="clearfix"></div>
 		    	<p class="mb-1">{{bill.currency}} {{bill.amount}}</p>
