--- a/ebill-client/partials/bills.html
+++ b/ebill-client/partials/bills.html
@@ -10,7 +10,7 @@
 				<div class="clearfix"></div>
 		    	<p class="mb-1">{{bill.currency}} {{bill.amount}}</p>
 		    	<div class="span12">
-		    		<p class="mb-1 pull-right" ng-class="statusStyle(bill)">{{bill.status}}</p>
+		    		<h3 class="mb-1 pull-right" ng-class="statusStyle(bill)">{{bill.status}}</h3>
 		    	</div>
 		    	<div class="clearfix"></div>
 		    </div>
